[gd_scene load_steps=9 format=3 uid="uid://b7x4gxiv8s0vv"]

[ext_resource type="Script" uid="uid://cqhbjirajqs4" path="res://scenes/player/scripts/credits.gd" id="1_0ctdu"]
[ext_resource type="Texture2D" uid="uid://csa0ibyh6e8u" path="res://images/stars.png" id="2_0ctdu"]
[ext_resource type="FontFile" uid="uid://d2ktr2x6rixh2" path="res://fonts/TimesNewPixel.ttf" id="3_8gwij"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bqqt6"]
texture = ExtResource("2_0ctdu")
modulate_color = Color(0.427493, 0.42749307, 0.42749307, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.5890953, 0.5890958, 0.58909535, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0, 0, 0, 0.21568628)
shadow_size = 5
shadow_offset = Vector2(0, 3.89)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0.2159017, 0.21590173, 0.2159017, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0, 0, 0, 0.21568628)
shadow_size = 5
shadow_offset = Vector2(0, 3.89)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
bg_color = Color(0.37413925, 0.37413928, 0.37413922, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0, 0, 0, 0.21568628)
shadow_size = 5
shadow_offset = Vector2(0, 3.89)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[node name="credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ctdu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bqqt6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -16.0
offset_right = 129.0
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -50

[node name="Credits" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_8gwij")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/hover = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
text = "Return"

[node name="LinkButton" type="LinkButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.5
offset_top = -33.0
offset_right = 360.5
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_8gwij")
theme_override_font_sizes/font_size = 40
text = "Hand Model: https://sketchfab.com/scribbletoad"

[node name="musicButton" type="LinkButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -273.5
offset_top = -88.0
offset_right = 273.5
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_8gwij")
theme_override_font_sizes/font_size = 40
text = "Music: Mignon 1N77 by Setuniman "

[node name="Label4" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -438.5
offset_top = -32.0
offset_right = 438.5
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_fonts/font = ExtResource("3_8gwij")
theme_override_font_sizes/font_size = 40
text = "Hand Model: https://sketchfab.com/scribbletoad"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -438.5
offset_top = -86.0
offset_right = 438.5
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_fonts/font = ExtResource("3_8gwij")
theme_override_font_sizes/font_size = 40
text = "Music: Mignon 1N77 by Setuniman "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -141.0
offset_right = 144.0
offset_bottom = -106.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_fonts/font = ExtResource("3_8gwij")
theme_override_font_sizes/font_size = 40
text = "Sound effects: Public Domain sounds from freesound.org"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -197.0
offset_right = 96.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_fonts/font = ExtResource("3_8gwij")
theme_override_font_sizes/font_size = 40
text = "Created by: AlexPinekone"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="LinkButton" to="." method="_on_link_button_pressed"]
[connection signal="pressed" from="musicButton" to="." method="_on_music_button_pressed"]
